--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,74 @@
-.App {
-  text-align: center;
+.Player {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100px;
+  background: #f0f0f0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.PlayerTop {
+  width: 100%;
+  position: relative;
+  padding: 18px 0 0;
+  overflow: hidden;
+  color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.PlayerWp {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('https://placeimg.com/640/480/any') no-repeat center;
+  background-size: cover;
+  filter: blur(10px);
+  transform: scale(1.5);
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.PlayerWp:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.5;
+  z-index: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.PlayerTopContent {
+  position: relative;
+  z-index: 3;
+}
+
+.PlayerBottom {
+  overflow: hidden;
+  background-color: #fff;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 18px 0 24px;
+  box-shadow: 0px 5px 6px 0 rgba(0, 0, 0, 0.11);
+}
+
+
+@media screen and (min-width: 1024px) {
+
+  .PlayerTopContent {
+    width: 990px;
+    margin: 0 auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .PlayerBottom {
+    padding-top: 21px;
   }
+
+  .PlayerBottomContent {
+    width: 990px;
+    margin: 0 auto;
+  }
+
 }
