--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,45 @@
+@font-face {
+    font-family: 'Arimo';
+    src: url('./fonts/regular.eot');
+    src: url('./fonts/regular.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/regular.woff2') format('woff2'),
+         url('./fonts/regular.woff') format('woff'),
+         url('./fonts/regular.ttf') format('truetype'),
+         url('./fonts/regular.svg#regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Arimo';
+    src: url('./fonts/bold.eot');
+    src: url('./fonts/bold.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/bold.woff2') format('woff2'),
+         url('./fonts/bold.woff') format('woff'),
+         url('./fonts/bold.ttf') format('truetype'),
+         url('./fonts/bold.svg#bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Arimo';
+    src: url('./fonts/italic.eot');
+    src: url('./fonts/italic.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/italic.woff2') format('woff2'),
+         url('./fonts/italic.woff') format('woff'),
+         url('./fonts/italic.ttf') format('truetype'),
+         url('./fonts/italic.svg#italic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Arimo', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
