--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -5,6 +5,17 @@
 
 .list {
   width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.carousel {
+  margin: 0;
+  padding: 0;
+  display: block;
+  width: 100%;
 }
 
 .item {
