--- a/src/App.css
+++ b/src/App.css
@@ -50,15 +50,17 @@
   background-color: #fff;
   width: 100%;
   box-sizing: border-box;
-  padding: 18px 0 24px;
+  padding: 18px 0 0;
   box-shadow: 0px 5px 6px 0 rgba(0, 0, 0, 0.11);
 }
 
 
-@media screen and (min-width: 1024px) {
+
+
+@media screen and (min-width: 768px) {
 
   .PlayerTopContent {
-    width: 990px;
+    width: 760px;
     margin: 0 auto;
   }
 
@@ -67,8 +69,20 @@
   }
 
   .PlayerBottomContent {
-    width: 990px;
+    width: 760px;
     margin: 0 auto;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+  .PlayerTopContent {
+    width: 990px;
+  }
+
+  .PlayerBottomContent {
+    width: 990px;
   }
 
 }
