--- a/src/components/Series/Series.module.css
+++ b/src/components/Series/Series.module.css
@@ -1,5 +1,5 @@
 .content {
-  padding: 0 10px 30px;
+  padding: 0 10px 24px;
   box-sizing: border-box;
 }
 
@@ -198,8 +198,11 @@
   border-radius: 3px;
 }
 
+.duration {
+  display: none;
+}
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
 
   .content {
     padding: 0;
@@ -214,17 +217,33 @@
   .link {
     flex-direction: column;
     align-items: flex-start;
-    width: 225px;
+    width: 237px;
     margin: 0 24px 28px 0;
   }
 
-  .item:nth-child(4n + 4) .link{
+
+  .item:nth-child(3n + 3) .link{
     margin-right: 0;
   }
 
   .image {
     width: 100%;
     height: 133px;
+  }
+  .info {
+    padding: 14px 0 0 0;
+  }
+
+  .title {
+    font-size: 17px;
+    line-height: 1;
+  }
+  .date {
+    font-size: 12px;
+  }
+
+  .toggle {
+    margin-top: 0;
   }
 
   .notification {
@@ -250,6 +269,7 @@
   }
 
   .duration {
+    display: block;
     position: absolute;
     bottom: 6px;
     right: 6px;
@@ -265,16 +285,28 @@
     padding: 0 6px;
   }
 
-  .info {
-    padding: 14px 0 0 0;
+
+}
+
+
+@media screen and (min-width: 1024px) {
+
+  .content {
+    padding: 0;
   }
 
-  .title {
-    font-size: 17px;
-    line-height: 1;
+
+  .link {
+    width: 227px;
+    margin-right: 27px;
   }
-  .date {
-    font-size: 12px;
+
+  .item:nth-child(3n + 3) .link{
+    margin-right: 28px;
+  }
+
+  .item:nth-child(4n + 4) .link{
+    margin-right: 0;
   }
 
   .toggle {
