--- a/src/components/Video/Info/VideoInfo.module.css
+++ b/src/components/Video/Info/VideoInfo.module.css
@@ -131,6 +131,77 @@
 }
 
 
+
+@media screen and (min-width: 768px) {
+
+  .content {
+    width: 245px;
+  }
+
+  .top {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+
+  .image {
+    width: 50px;
+  }
+
+  .age {
+    width: 24px;
+    height: 18px;
+    font-size: 11px;
+    line-height: 18px;
+    bottom: 2px;
+    left: 2px;
+  }
+
+  .about {
+    padding-left: 8px;
+  }
+
+  .title {
+    font-size: 16px
+  }
+
+  .time {
+    font-size: 24px;
+  }
+
+  .days {
+    font-size: 10px;
+  }
+
+  .bottom {
+    padding: 20px 0 0;
+  }
+
+  .meta {
+    font-size: 14px;
+    flex-wrap: wrap;
+  }
+
+  .lastViews {
+    width: 100%;
+    display: block;
+    font-size: 12px;
+    color: #cacaca;
+    line-height: 1;
+    padding-top: 4px;
+    font-weight: normal;
+  }
+
+  .article {
+    padding-top: 18px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+}
+
+
+
 @media screen and (min-width: 1024px) {
 
   .content {
