--- a/src/components/Series/Series.module.css
+++ b/src/components/Series/Series.module.css
@@ -2,6 +2,27 @@
   padding: 0 10px 24px;
   box-sizing: border-box;
 }
+.contentLoading {
+  composes: content;
+  position: relative;
+}
+
+.contentLoading .list {
+  filter: blur(5px);
+  position: relative;
+}
+.contentLoading .list:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: .3;
+  background: #d5275e;
+  z-index: 10;
+}
 
 .list {
   padding: 0;
